--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <ul>
           <li>
             <img
-              src="./images/img-1.jpg"
+              src="./images/img-one.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
@@ -85,7 +85,7 @@
           </li>
           <li>
             <img
-              src="./images/img-2.jpg"
+              src="./images/img-two.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
@@ -95,7 +95,7 @@
           </li>
           <li>
             <img
-              src="./images/img-3.jpg"
+              src="./images/img-tree.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
@@ -105,13 +105,51 @@
           </li>
           <li>
             <img
-              src="./images/img-4.jpg"
+              src="./images/img-four.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/portfolio-img-one.jpg" alt="Banking App" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-img-two.jpg" alt="Cashless Payment" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-img-three.jpg" alt="Meditation App" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-img-four.jpg" alt="Taxi Service" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/portfolio-img-five.jpg"
+              alt="Screen Illustrations"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/portfolio-img-six.jpg" alt="Online Courses" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
