add portfolio css

--- a/index.html
+++ b/index.html
@@ -139,41 +139,67 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/portfolio-img-one.jpg" alt="Banking App" />
-            <h3>Banking App</h3>
-            <p>App</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-two.jpg" alt="Cashless Payment" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-three.jpg" alt="Meditation App" />
-            <h3>Meditation App</h3>
-            <p>App</p>
-          </li>
-          <li>
-            <img src="./images/portfolio-img-four.jpg" alt="Taxi Service" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
+              src="./images/portfolio-img-one.jpg"
+              alt="Banking App"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-img-two.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-img-three.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-img-four.jpg"
+              alt="Taxi Service"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
               src="./images/portfolio-img-five.jpg"
               alt="Screen Illustrations"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
           </li>
-          <li>
-            <img src="./images/portfolio-img-six.jpg" alt="Online Courses" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img
+              class="portfolio-img"
+              src="./images/portfolio-img-six.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
