--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               width="264"
               height="260"
             />
-            <h3>class="team-subtitle"Tom Ford</h3>
+            <h3 class="team-subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
           <li class="team-item">
@@ -187,6 +187,7 @@
               class="portfolio-img"
               src="./images/portfolio-img-five.jpg"
               alt="Screen Illustrations"
+              width="360"
             />
             <h3 class="portfolio-subtitle">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
